<resources>
    <string name="app_name">Buyer App</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text">Food is what people and animals eat. Food usually comes from animals or plants. It is eaten by living things to provide energy and nutrition. Food contains the nutrition that people and animals need to be healthy. The consumption of food is enjoyable to humans. It contains protein, fat, carbohydrates, vitamins, and minerals.</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>

    <!--login property-->
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <!--register property-->
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="detail_address">Detail address</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="your_email">Your email</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="day_array">
        <item>Day</item>
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="time_array">
        <item>Time</item>
        <item>Sat</item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>
    <string name="title_activity_maps2">Map</string>

</resources>
