<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/register_bg"
    tools:context="com.ingeniumbd.buyerapp.activities.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <RelativeLayout
            android:id="@+id/login_activity_top_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:visibility="visible"
                android:src="@drawable/back"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_activity_name"
            android:hint="@string/your_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:inputType="text"
            android:layout_marginTop="30dp"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_activity_phone"
            android:hint="@string/phone"
            android:textColor="@color/white"
            android:inputType="phone"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_activity_email"
            android:hint="@string/your_email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_activity_password"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/register_activity_confirmPassword"
            android:hint="@string/confirm_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:inputType="textPassword"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_activity_country"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="13sp"
                android:hint="@string/country"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/register_activity_city"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="13sp"
                android:hint="@string/city"
                android:theme="@style/MyEditTextTheme"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/register_activity_address"
            android:hint="@string/detail_address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp"
            android:inputType="text"
            android:theme="@style/MyEditTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/upload_profile_picture"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/image"
                android:src="@mipmap/ic_add"
                android:onClick="imageUpload"
                android:layout_marginStart="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>

        <Button
            android:layout_marginTop="20dp"
            android:onClick="register"
            android:background="@drawable/done"
            android:layout_width="200dp"
            android:layout_height="35dp" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
